--- a/02_slidein_menu/index.html
+++ b/02_slidein_menu/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slide in menu</title>
+    <title>02. Slide in menu</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
