--- a/03_cardspread/index.html
+++ b/03_cardspread/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Card spread</title>
+    <title>03. Card spread</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
