--- a/03_cardspread/index.html
+++ b/03_cardspread/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <aside><p>hover the page for a colorful surprise!</p></aside>
     <article class="card"></article>
     <article class="card"></article>
     <article class="card"></article>
