--- a/04_fourcorners/index.html
+++ b/04_fourcorners/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Four corners</title>
-    <link rel="stylesheet" href="style.css">
+    <title>04. Four corners</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <main>
