--- a/05_spinner/index.html
+++ b/05_spinner/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>spinner</title>
-    <link rel="stylesheet" href="style.css">
+    <title>05. spinner</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <aside class="spinner"></aside>
+    <aside class="note"><p>watch the flower spin... waiting for something that may never load...</p></aside>
+    <aside class="spinner">
+        <div class="flower"></div>
+        <div class="flower"></div> 
+        <div class="leaf"></div>
+        <div class="leaf"></div>
+        <div class="center"></div> 
+        <div class="center"></div> 
+    </aside>
+
+  
 </body>
 </html>
