--- a/06_stopwatch/index.html
+++ b/06_stopwatch/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stopwatch</title>
-    <link rel="stylesheet" href="style.css">
+    <title>06. Stopwatch</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <main>
         <aside class="s"></aside>
-        <aside class="ms"></aside>
+        <aside class="m"></aside>
         <div class="dot"></div>
     </main>
 </body>
