finished exercise 8, + reformatting

--- a/03_cardspread/index.html
+++ b/03_cardspread/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>03. Card spread</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <aside><p>hover the page for a colorful surprise!</p></aside>
     <article class="card"></article>
     <article class="card"></article>
@@ -17,5 +17,5 @@
     <article class="card"></article>
     <article class="card"></article>
     <article class="card"></article>
-</body>
+  </body>
 </html>
