--- a/08_flipcard/index.html
+++ b/08_flipcard/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Card flip</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>08. Card flip</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+
+  <body>
     <article>
-        <section class="front">Front</section>
-        <section class="back">Back</section>
+      <section class="card front">
+        <section class="top">
+          <p>&clubs;</p>
+          <p>5</p>
+        </section>
+
+        <section class="middle">
+          <p>&clubs;</p>
+        </section>
+        <section class="bottom">
+          <p>&clubs;</p>
+          <p>5</p>
+        </section>
+      </section>
+      <section class="card back"><p>&clubs;</p></section>
     </article>
-</body>
+  </body>
 </html>
