--- a/06_stopwatch/index.html
+++ b/06_stopwatch/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>06. Stopwatch</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <main>
-        <aside class="s"></aside>
-        <aside class="m"></aside>
-        <div class="dot"></div>
+      <aside class="s"></aside>
+      <aside class="m"></aside>
+      <div class="dot"></div>
     </main>
-</body>
+  </body>
 </html>
