--- a/10_organic/index.html
+++ b/10_organic/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Organic animation</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>10. Organic animation</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <main>
-        <aside></aside>
-        <aside></aside>
-        <aside></aside>
-        <aside></aside>
-        <aside></aside>
-        <aside></aside>
-        <aside></aside>
-        <aside></aside>
-        <aside></aside>
-        <aside></aside>
-        <aside></aside>
-        <aside></aside>
-        <aside></aside>
-        <aside></aside>
-        <aside></aside>
-        <aside></aside>
-        <aside></aside>
-        <aside></aside>
-        <aside></aside>
-        <aside></aside>
+      <aside></aside>
+      <aside></aside>
+      <aside></aside>
+      <aside></aside>
+      <aside></aside>
+      <aside></aside>
+      <aside></aside>
+      <aside></aside>
+      <aside></aside>
+      <aside></aside>
+      <aside></aside>
+      <aside></aside>
+      <aside></aside>
+      <aside></aside>
+      <aside></aside>
+      <aside></aside>
+      <aside></aside>
+      <aside></aside>
+      <aside></aside>
+      <aside></aside>
     </main>
-</body>
+  </body>
 </html>
